--- a/docs/evaluation.tex
+++ b/docs/evaluation.tex
@@ -2,6 +2,13 @@
 
 With the eventual growth of the Lightning Network a fee market for channel liquidity will emerge. How routing nodes 
 
+
+\section{Pricing function}
+
+Betweenness centrality
+
+\[ g(v) = \sum_{s \neq v \neq d}\frac{\sigma_{sd}(v)}{\sigma_{sd}} \]
+
 \section{Topology}
 
 Network topology
@@ -20,6 +27,8 @@ Barabási–Albert model
 Does it become scale free
 
 does any channel opening algorithm perform better than another and essentially force the network into a scale free hub-spoke network instead of a mesh network?
+
+
 
 
 
