--- a/docs/references.bib
+++ b/docs/references.bib
@@ -484,9 +484,38 @@ TOR, reverse govern-print mention
 	note = {\\(Accessed on 2019-02-18)},
 }
 
+@misc{bip:0101:increase:block:size,
+	author = { Andersen, Gavin},
+	title = "BIP 0101 Increase maximum block size"
+	year = "2015",
+	month = "June",
+	day = "22",
+	howpublished = {
+		\url{https://github.com/bitcoin/bips/blob/master/bip-0101.mediawiki}},
+	note = {\\(Accessed on 2019-02-19)},
+}
 
+@misc{bip:0102:increase:2mb,
+	author = { Garzik, Jeff},
+	title = "BIP 0102 Block size increase to 2MB"
+	year = "2015",
+	month = "June",
+	day = "23",
+	howpublished = {
+		\url{https://github.com/bitcoin/bips/blob/master/bip-0102.mediawiki}},
+	note = {\\(Accessed on 2019-02-19)},
+}
 
-
+@misc{bip:0103:increase:with:technology,
+	author = { Wuille, Pieter },
+	title = "BIP 0103 Block size following technological growth"
+	year = "2015",
+	month = "June",
+	day = "23",
+	howpublished = {
+		\url{https://github.com/bitcoin/bips/blob/master/bip-0103.mediawiki}},
+	note = {\\(Accessed on 2019-02-19)},
+}
 
 
 % Scaling
