--- a/docs/references.bib
+++ b/docs/references.bib
@@ -460,6 +460,17 @@ TOR, reverse govern-print mention
 	note = {\\(Accessed on 2019-02-18)},
 }
 
+@misc{bip:0032:hd:wallet,
+	author = { Wuille, Pieter },
+	title = "BIP 0032 Hierarchical Deterministic Wallets"
+	year = "2012",
+	month = "February",
+	day = "11",
+	howpublished = {
+		\url{https://github.com/bitcoin/bips/blob/master/bip-0032.mediawiki}},
+	note = {\\(Accessed on 2019-02-18)},
+}
+
 @misc{bip,
 	author = {},
 	title = {Bitcoin improvement proposals },
@@ -516,7 +527,6 @@ TOR, reverse govern-print mention
 		\url{https://github.com/bitcoin/bips/blob/master/bip-0103.mediawiki}},
 	note = {\\(Accessed on 2019-02-19)},
 }
-
 
 % Scaling
 
