--- a/docs/scaling.tex
+++ b/docs/scaling.tex
@@ -38,7 +38,18 @@ There has been many proposals to increase the block size. Including a handful of
 \end{itemize}
 
 Most of these BIPs are implemented as a hard forks. Older nodes would regard the bigger blocks as being over the limit and thus invalid.
-If poorly executed, without a great majority upgrading the software in time, the network would be forked into two networks with 
+If poorly executed, without a great majority upgrading the software in time, the network would be forked into two networks with diverging transaction histories. 
+
+% need better name for community worker
+\subsection{Contienous }
+
+No proposal to increase the block size has yet received enough support to be activated. This has caused some controversy among community members and multiple have attempted to increase the limit by force.
+
+The bitcoin cash saga
+
+\begin{itemize}
+	\item SegWit2x
+\end{itemize} 
 
 \section{Removing decentralization}
 
