--- a/docs/evaluation.tex
+++ b/docs/evaluation.tex
@@ -3,6 +3,8 @@
 With the eventual growth of the Lightning Network a fee market for channel liquidity will emerge. How routing nodes 
 
 
+Fee as a competitive equilibrium 
+
 \section{Pricing function}
 
 Betweenness centrality
