--- a/docs/main.tex
+++ b/docs/main.tex
@@ -121,7 +121,8 @@
 
   		\huge{\textbf{\course}}\\
   		\vspace{10mm}
-  		\LARGE{ Routing Fee Estimation in the Lightning Network } \\
+%  		\LARGE{ Routing Fee Estimation in the Lightning Network } \\
+  		\LARGE{ Emergent Routing Policies in the Lightning Network } \\
   		\vspace{2mm}
 	
 		\begin{footnotesize}
