--- a/docs/abstract.tex
+++ b/docs/abstract.tex
@@ -1,5 +1,6 @@
 \centering \textbf{Abstract}
 
+\iffalse
     In camera pre-calibration, images of a calibration object are commonly 
     used to determine the internal geometry of a camera.
     The calibration imaging is often optimized to have the calibration object 
@@ -21,3 +22,13 @@
     However, for the standard and area-based calibrations, the true errors
     surpassed the estimated uncertainties by up to
     26 and 58 percent, respectively.
+\fi
+
+	In payment channel network, such as the lightning network, the channel
+	procure a fee to the operator if payment route passes the channel.
+	Currently the fee is mostly manually set procuring an unoptimized profit to
+	 the operator.
+	
+	A simulation study was performed where many policies was 		 
+	
+	
