--- a/docs/evaluation.tex
+++ b/docs/evaluation.tex
@@ -5,6 +5,22 @@ With the eventual growth of the Lightning Network a fee market for channel liqui
 
 Fee as a competitive equilibrium 
 
+
+
+\begin{figure}[!htb]
+	\hspace*{-0.7cm} 
+	\centering
+	\includegraphics[width=11cm]{equilibrium_sized.png}
+	\caption{ 
+		}
+		\label{fig:equilibrium}
+		\hspace*{2mm} 	
+\end{figure}
+
+
+
+The cost of procuring a shortest path between s and d might be unequal for two different routing nodes dependent on already existing paths and set policies
+
 \section{Pricing function}
 
 Betweenness centrality
@@ -31,7 +47,25 @@ Does it become scale free
 does any channel opening algorithm perform better than another and essentially force the network into a scale free hub-spoke network instead of a mesh network?
 
 
-
+oaeu
+oaeu
+aoue
+aoeu
+aou
+aoeu
+oa
+uao
+ue
+aoeu
+oaue
+oaeu
+aoeu
+aoe
+uaoeu aoeu oaeu aoe uaoeu oaeuthnoeuatnh 
+aoeu oaeu oeau thnoeutnhoeuaththe thoaeutheoua 
+aoeu h
+coeauueuoae uoeua croeaghc oeauh eoucreou chregoucr 
+coraeugcrg ecuogcroeug e auoe craoecucgcr aoecug ceoeau 
 
 
 % https://webusers.imj-prg.fr/~ricardo.perez-marco/publications/articles/antrouting3.pdf
