--- a/docs/evaluation.tex
+++ b/docs/evaluation.tex
@@ -2,6 +2,10 @@
 
 With the eventual growth of the Lightning Network a fee market for channel liquidity will emerge. How routing nodes 
 
+Lightning network as a graph
+
+Fee price in a competitive equlibirum.
+
 
 Fee as a competitive equilibrium 
 
@@ -66,6 +70,9 @@ aoeu oaeu oeau thnoeutnhoeuaththe thoaeutheoua
 aoeu h
 coeauueuoae uoeua croeaghc oeauh eoucreou chregoucr 
 coraeugcrg ecuogcroeug e auoe craoecucgcr aoecug ceoeau 
+
+% THE ADJUSTABLE SCALE FREE  http://www.uvm.edu/pdodds/files/papers/others/2002/holme2002a.pdf
+
 
 
 % https://webusers.imj-prg.fr/~ricardo.perez-marco/publications/articles/antrouting3.pdf
